<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2023-2024 Maveniverse Org.
    All rights reserved. This program and the accompanying materials
    are made available under the terms of the Eclipse Public License v2.0
    which accompanies this distribution, and is available at
    https://www.eclipse.org/legal/epl-v20.html

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>eu.maveniverse.maven.parent</groupId>
    <artifactId>parent</artifactId>
    <version>9</version>
  </parent>

  <groupId>eu.maveniverse.maven.toolbox</groupId>
  <artifactId>toolbox</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>${project.groupId}:${project.artifactId}</name>

  <url>https://www.maveniverse.eu/toolbox</url>

  <licenses>
    <license>
      <name>EPL-2.0</name>
      <url>https://www.eclipse.org/legal/epl-2.0/</url>
    </license>
  </licenses>

  <modules>
    <module>shared</module>
    <module>maven-plugin</module>
    <module>cli</module>
  </modules>

  <scm>
    <connection>scm:git:git@github.com:maveniverse/toolbox.git</connection>
    <developerConnection>scm:git:git@github.com:maveniverse/toolbox.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/maveniverse/toolbox</url>
  </scm>

  <issueManagement>
    <system>Github</system>
    <url>https://github.com/maveniverse/toolbox/issues</url>
  </issueManagement>

  <ciManagement>
    <system>Github</system>
    <url>https://github.com/maveniverse/toolbox/actions</url>
  </ciManagement>

  <properties>
    <project.build.outputTimestamp>2024-03-08T16:26:15Z</project.build.outputTimestamp>

    <maven.compiler.release>17</maven.compiler.release>

    <!--
    Build time: latest Maven and LTS Java.
    -->
    <requireBuildtimeMavenVersion.version>[3.9.6,)</requireBuildtimeMavenVersion.version>
    <requireBuildtimeJavaVersion.version>[11.0.2,)</requireBuildtimeJavaVersion.version>

    <!-- Dependency versions -->
    <version.mima>2.4.8</version.mima>
    <version.maven>3.9.6</version.maven>
    <version.resolver>1.9.18</version.resolver>
    <version.mavenPluginTools>3.11.0</version.mavenPluginTools>
    <version.slf4j>1.7.36</version.slf4j>
    <version.picocli>4.7.5</version.picocli>
    <version.mase>7.1.2</version.mase>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Internal -->
      <dependency>
        <groupId>eu.maveniverse.maven.toolbox</groupId>
        <artifactId>shared</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- Logging (except API, runtime only) -->
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${version.slf4j}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-simple</artifactId>
        <version>${version.slf4j}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>jcl-over-slf4j</artifactId>
        <version>${version.slf4j}</version>
      </dependency>

      <!-- MIMA -->
      <dependency>
        <groupId>eu.maveniverse.maven.mima</groupId>
        <artifactId>context</artifactId>
        <version>${version.mima}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.mima.runtime</groupId>
        <artifactId>embedded-maven</artifactId>
        <version>${version.mima}</version>
      </dependency>
      <dependency>
        <groupId>eu.maveniverse.maven.mima.runtime</groupId>
        <artifactId>standalone-static-uber</artifactId>
        <version>${version.mima}</version>
      </dependency>

      <!-- Resolver + Maven -->
      <dependency>
        <groupId>org.apache.maven.resolver</groupId>
        <artifactId>maven-resolver-api</artifactId>
        <version>${version.resolver}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven.resolver</groupId>
        <artifactId>maven-resolver-util</artifactId>
        <version>${version.resolver}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-plugin-api</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-core</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-settings</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-settings-builder</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-model-builder</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven</groupId>
        <artifactId>maven-resolver-provider</artifactId>
        <version>${version.maven}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven.plugin-tools</groupId>
        <artifactId>maven-plugin-annotations</artifactId>
        <version>${version.mavenPluginTools}</version>
      </dependency>

      <!-- DI -->
      <dependency>
        <groupId>javax.inject</groupId>
        <artifactId>javax.inject</artifactId>
        <version>1</version>
      </dependency>
      <dependency>
        <groupId>com.google.inject</groupId>
        <artifactId>guice</artifactId>
        <version>6.0.0</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>33.1.0-jre</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.sisu</groupId>
        <artifactId>org.eclipse.sisu.inject</artifactId>
        <version>${version.sisu}</version>
      </dependency>

      <!-- Maven Indexer -->
      <dependency>
        <groupId>org.apache.maven.indexer</groupId>
        <artifactId>search-api</artifactId>
        <version>${version.mase}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven.indexer</groupId>
        <artifactId>search-backend-remoterepository</artifactId>
        <version>${version.mase}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.maven.indexer</groupId>
        <artifactId>search-backend-smo</artifactId>
        <version>${version.mase}</version>
      </dependency>

      <!-- CLI -->
      <dependency>
        <groupId>info.picocli</groupId>
        <artifactId>picocli</artifactId>
        <version>${version.picocli}</version>
      </dependency>
      <dependency>
        <groupId>info.picocli</groupId>
        <artifactId>picocli-codegen</artifactId>
        <version>${version.picocli}</version>
      </dependency>
      <dependency>
        <groupId>info.picocli</groupId>
        <artifactId>picocli-shell-jline3</artifactId>
        <version>${version.picocli}</version>
      </dependency>
      <dependency>
        <groupId>org.jline</groupId>
        <artifactId>jline</artifactId>
        <version>3.25.1</version>
      </dependency>
      <dependency>
        <groupId>org.fusesource.jansi</groupId>
        <artifactId>jansi</artifactId>
        <version>2.4.1</version>
      </dependency>

      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>5.10.2</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <repositories>
    <repository>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <id>apache.snapshots.https</id>
      <name>ASF Snapshots</name>
      <url>https://repository.apache.org/content/repositories/snapshots/</url>
    </repository>
  </repositories>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-plugin-plugin</artifactId>
          <version>${version.mavenPluginTools}</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.eclipse.sisu</groupId>
        <artifactId>sisu-maven-plugin</artifactId>
        <version>${version.sisu}</version>
        <executions>
          <execution>
            <id>index-project</id>
            <goals>
              <goal>main-index</goal>
              <goal>test-index</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
